--- a/src/WebClient/src/app/app.component.html
+++ b/src/WebClient/src/app/app.component.html
@@ -1,1 +1,13 @@
+<mat-toolbar>
+  <button mat-icon-button class="example-icon" aria-label="Botao de menu">
+   <mat-icon>menu</mat-icon>
+ </button>
+ <a routerLink="/" class="home-link">
+   <span>The Social Network</span>
+ </a>
+ <span class="example-spacer"></span>
+ <button mat-icon-button class="example-icon" aria-label="Login do sistema" routerLink="/login">
+  <mat-icon>login</mat-icon>
+</button>
+</mat-toolbar>
 <router-outlet></router-outlet>
